# page-summarizer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.python  Dockerfile.rust  README.md  app.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  run.py  runner.py  search.sh  temp.dockerfile.txt
agents/: research_agent.py  summarize.py
core/: crawl_extract.py  crawler.py  fetch.py  search_duckduckgo.py
google-scraper/: extract-google-links.js  initiate-scraping.js  package.json
output/: summaries.json  urls.json
prod-docker-files/: docker-compose.prod.yml
rust-scraper/: Cargo.toml
rust-scraper/src/: main.rs
scrapers-js/: package-lock.json
search-engine-scraper/: package.json  scraper.js
src/: generate_random_headers.rs  main.rs  page_cleaner.rs  run.py  tfidf_summarizer.rs
src/agents/: mod.rs  proxy_summarizer.rs  summarizer.py
src/core/: common_crawl.rs  crawler.rs
src/scrapers-js/: backup-page-opener.js  backup-page-opener.mjs  search-engine-scraper.js  search-enginer-scraper.js
