[package]
name = "deep-research"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
ua_generator = "=0.5.7"
futures = "0.3.31"
rand = "0.9.0"
scraper = "0.23.1"
dashmap = "6.1.0"
