[package]
name = "deep-research"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
ua_generator = "=0.5.7"
futures = "0.3.31"
rand = "0.9.0"
scraper = "0.23.1"
dashmap = "6.1.0"
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
async-nats = "0.40.0"
env_logger = "0.11.8"
log = "0.4.27"
bytes = "1.10.1"
